cluster/web/redlib/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: redlib
    app.kubernetes.io/version: 687a5d7
  name: redlib
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redlib
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redlib
        app.kubernetes.io/version: 687a5d7
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/redlib:687a5d7@sha256:4e99447fcbaefdf8c32fcea33e6969b47c3885023a684aa0fad4d007ad3010fd
        name: redlib
        ports:
        - containerPort: 8080
          name: redlib
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
