cluster/web/redlib/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: redlib
    app.kubernetes.io/version: "7746725"
  name: redlib
spec:
  selector:
    app.kubernetes.io/name: redlib
  ports:
  - name: http-redlib
    port: 8080
    targetPort: 8080
